# yt-diff-mcp

./: .env.example  .gitignore  AI_AGENT_ONBOARDING.md  LICENSE  README.md  pyproject.toml
examples/: claude-desktop.json  hermes-config.yaml
src/yt_diff_mcp/: server.py
tests/: smoke_protocol.py
